# raytracer

./: CMakeLists.txt  image.ppm  main.cpp
include/: aabb.h  bvh.h  camera.h  camera_old.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  material.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  triangles.h  usefulstuff.h  vec3.h
